--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "author": "Aki Koskinen",
   "dependencies": {
+    "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
@@ -12,7 +13,7 @@
     "serve-static": "^1.10.2"
   },
   "scripts": {
-    "postinstall": "mkdir -p build && browserify -t [ babelify --presets [ react ] ] src/nextbus.js -o build/nextbus.js",
+    "postinstall": "mkdir -p build && browserify -t [ babelify ] src/nextbus.js -o build/nextbus.js",
     "start": "node server.js"
   },
   "engines": {
